# RecSys-Challenge-2026

./: .gitignore  EXPERIMENTS.md  analyze_catalog_diversity.py  analyze_ltr_error_segments.py  cache_dense_candidates.py  constraint_gating.py  evaluate_constraint_gating.py  evaluate_cross_model_fusion.py  evaluate_devset.py  evaluate_final_turn_recall.py  evaluate_hybrid_devset.py  evaluate_hybrid_recall_devset.py  evaluate_locked_top1_fusion.py  evaluate_ltr_feature_ablation.py  evaluate_ltr_seed_ensemble.py  make_response_microfix.py  merge_constraint_gated_prediction.py  merge_locked_top1_prediction.py  mine_hard_negatives.py  optimize_responses_blindset.py  pyproject.toml  readme.md  regenerate_responses_blindset.py  run_inference_hybrid_dense_blindset.py  run_inference_ltr_blindset.py  run_inference_ltr_fusion_blindset.py  run_inference_rerank_blindset.py  train_ltr_cached_ablation.py  train_ltr_ranker.py  train_reranker.py  train_supervised_dense_retriever.py  validate_blind_prediction.py
config/: bm25_doubao_blindset_A.yaml  bm25_tags_doubao_blindset_A.yaml
mcrs/: __init__.py  crs_baseline.py
mcrs/db_item/: music_catalog.py
mcrs/lm_modules/: __init__.py  doubao_api.py
mcrs/retrieval_modules/: __init__.py  precomputed_embeddings.py  qwen_dense.py  supervised_dense.py
